   - ofaTVARecordTreeview: rename column header (todo #1247).
   - UI: review dialog boxes layout (todo #1184).

 Bug fixes:

   - my_date_set_from_str(): fix parsing when input string is NULL.
   - ofaAccountProperties: fix error message when identifier is empty (todo #1256).
   - ofaCheckBalancesBin: does not increment account balances when amounts are nul (todo #1259).
   - ofaMiscAuditUI: display DBMS audit trace (todo #1252).
   - ofaOpeTemplateProperties: does not double the rows count on Cancel (todo #1250).
   - ofaRecPeriodProperties: does not unref spin adjustment.
   - ofaRecPeriodProperties: fix UI widget name.
   - ofaRecurrentModelManagement: fix sort of 'Enabled' column (todo #1257).
   - ofaTVAFormProperties: does not unref spin adjustment.
   - ofaTVARecordPage: fix deletability check (todo #1248).

 Other changes:

   - ofaApplication: move initialization from instantiation to startup (todo #1272).
   - ofaExerciceTreeview: new class.
   - ofaHub: initialize from ofa_hub_new() (todo #1273).
   - ofaHub: manage both dossier and user settings.
   - ofaIDBMeta interface is renamed to ofaIDBDossierMeta (todo #1274).
   - ofaIDBPeriod interface is renamed to ofaIDBExerciceMeta (todo #1275).
   - ofaMiscAuditStore: new class.
   - ofaMiscAuditTreeview: new class.
   - ofaMySQLMeta class is renamed to ofaMysqlDossierMeta (todo #1277).
   - ofaMySQLPeriod class is renamed to ofaMysqlExerciceMeta (todo #1278).
   - ofaPortfolioCollection class is renamed to ofaDossierCollection (todo #1264).
   - ofaSettings: deprecate all ofa_settings_dossier_xxx() methods.
   - ofaTargetChooserBin: new class.
   - ofaTVBin: new ofa-tvbin-vexpand property.

-----------------------------------------------------------------------
 Version 0.62
 ============

 Released on 2016-11-09
  
 New features and improvements:

   - Error messages are full sentences (todo #1244).
   - Homogeneize Importers version numbers (todo #1240).